<resources>
    <string name="app_name">Pool Dating</string>
    <string name="welcome_message">Welcome to Pool Dating – Pools Coming Soon</string>
    <string name="login_title">Login</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="phone_hint">Phone Number</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify">Verify</string>
    <string name="profile_setup">Profile Setup</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="bio_hint">Short bio</string>
    <string name="interests_hint">Interests (comma separated)</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="select_city">Select City</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="block_user">Block User</string>
    <string name="report_user">Report User</string>
    <string name="block_confirm_title">Block %1$s?</string>
    <string name="block_confirm_message">They will not be able to message you. Matches will be hidden. This action is reversible by Admin only for now.</string>
    <string name="block_action">Block</string>
    <string name="cancel">Cancel</string>
    <string name="report_title">Report User</string>
    <string name="report_button">Report</string>
    <string name="report_received">Report received. We will investigate.</string>
    <string name="report_failed">Report failed: %1$s</string>
    <string name="block_success">User blocked</string>
    <string name="block_failed">Failed to block: %1$s</string>
    <string name="chat_expired">EXPIRED</string>
    <string name="chat_waiting">Waiting for other user...</string>
    <string name="partner_continue">Partner wants to continue!</string>
    <string name="continue_chat">Continue Chat</string>
    <string name="accept_chat">Accept Chat Request</string>
    <string name="requesting">Requesting...</string>
    <string name="unblock_user">Unblock User</string>
    <string name="unblock_success">User unblocked</string>
    <string name="chat_blocked_input">You cannot reply to this conversation.</string>
</resources>
